--- a/views/items/item-single.ejs
+++ b/views/items/item-single.ejs
@@ -2,7 +2,7 @@
 
 <div class='item'>
   <h1><%= item.name %></h1>
-  <h3><%= item.img_url %></h3>
+  <img src=<%= item.img_url %>>
   <h3><%= item.review %></h3>
   <h3><%= item.diet_id %></h3>
   <a href="/items/<%= data.id %>/edit"> Edit this item </a>
