--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,12 @@
 <% include ./partials/boilerplate.ejs %>
 <div>
   <h1>hello world</h1>
+  <form  method="get" action="/items" >
+  <input  type="text" id="search" name="diet_name" placeholder="Search Diets">
+  <input  type="submit" name="submit" value="Search">
+</form
 </div>
 <% include ./partials/footer.ejs %>
+
+
+
