--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -6,5 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='ie=edge' />
   <title>Shopping List</title>
   <link rel='stylesheet' type='text/css' href='/style.css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
