--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,28 +1,39 @@
 
 <% include ./partials/boilerplate.ejs %>
 
-<!-- Modal -->
-<div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-<div class="modal-dialog">
-<div class="modal-content">
-<div class="modal-header">
-<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-<h4 class="modal-title" id="myModalLabel">That is what it's all about!</h4>
-</div>
-<div class="modal-body text-center">
-<div class="1">
-<h1> Awesome Title </h1>
-<h3>It's awesome, really!</h3>
-<div class="panel-body">
-<p>
-Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.
+
+<div id="aboutContainer">
+<div id="aboutDiv"
+<h2>Eating healthy has never been easier!</h2>
+<br></br>
+
+
+<p style="color: black">Healthy-eating involves months -- if not years -- of research, knowledge, and meticulously reading labels of every food item that you buy.
+Looking for something that's sugar-free? Do you want to start a Keto diet, but don't know where to begin? Curious to try Paleo out but you don't even know what the word even means? Healthy Helper is a virtual food label that categorizes your favorite items into different dietry concerns,
+so you'll never have to read another food label again.
+<br></br>
+
+Currently, in beta-testing, healthy helper is available across Trader Joe's nationwide, you can search for the following diets:
+<br></br>
+Organic,
+<br></br>
+Paleo,
+<br></br>
+Keto,
+<br></br>
+Gluten-Free,
+<br></br>
+Vegan,
+<br></br>
+GMO,
+<br></br>
+
+Take control of your diet, today!
 </p>
-  <br>
 </div>
 </div>
-</div>
-</div><!-- /.modal-content -->
-</div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+
+
+
 
 <% include ./partials/footer.ejs %>
