--- a/public/style.css
+++ b/public/style.css
@@ -400,5 +400,22 @@ width: 100%;
   margin: 20px;
   background-color: black;
   color: white;
+}
+
+#aboutContainer {
+width: 100%;
+ display: flex;
+ height: 100vh;
+ justify-content: center;
+ border: 1px solid black;
+ text-align: center;
+
+}
+
+#aboutDiv {
+align-self: center;
+text-align: center;
+border: 1px solid black;
+width: 50%;
 
 }
