--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,9 @@
 @import url(https://oss.maxcdn.com/libs/animate.css/2.0/animate.min.css);
 @import url(//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css);
 
+/* I edited CSS from Google Inspect Trader Joe's website, as well as combining it with the following codepens,
+that I edited: https://codepen.io/steinvc/pen/kxbgH and codepen by https://codepen.io/co/pen/ibaBy for the background color;
+
 html,body {
     width: 100%;
     height: 100%;
