--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,7 @@
 @import url(//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css);
 
 /* I edited CSS from Google Inspect Trader Joe's website, as well as combining it with the following codepens,
-that I edited: https://codepen.io/steinvc/pen/kxbgH and codepen by https://codepen.io/co/pen/ibaBy for the background color;
+that I edited: https://codepen.io/steinvc/pen/kxbgH and codepen by https://codepen.io/co/pen/ibaBy for the background color; */
 
 html,body {
     width: 100%;
